# noita-discord-bridge

./: Cargo.toml  Dockerfile  README.md
src/: discord.rs  irc.rs  main.rs
